libs/preprocessor/tests/errors/pe7_if_unit_or_function/stderr.ansi
[0m[1m[38;5;9merror[PE7][0m[1m: attempted to use `#if` on a unit or function macro[0m
  [0m[34m┌─[0m source.hpp:3:5
  [0m[34m│[0m
[0m[34m1[0m [0m[34m│[0m #define arma
  [0m[34m│[0m         [0m[34m----[0m [0m[34mdefined as a unit here[0m
[0m[34m2[0m [0m[34m│[0m 
[0m[34m3[0m [0m[34m│[0m #if [0m[31marma[0m
  [0m[34m│[0m     [0m[31m^^^^[0m [0m[31mattempted to use `#if` on unit macro `arma`[0m
  [0m[34m│[0m
  [0m[34m=[0m [33mhelp[0m: did you mean to use `#ifdef`?
  [0m[34m=[0m [32mtry[0m: #ifdef arma

